# teams-to-mattermost-migration-platform

./: .coverage  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CI_REMEDIATION_PLAN.md  CONTRIBUTING.md  ENGINEERING_ROADMAP.md  ENTERPRISE_UPGRADE_PLAN.md  FINAL_GAP_ANALYSIS.md  FIX_REPORT.md  FIX_VERIFICATION_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  P0_VERIFICATION_REPORT.md  PERFORMANCE_REPORT.md  PERFORMANCE_REVIEW.md  PRODUCTION_READINESS_REPORT.md  README.md  ROOT_CAUSE_ANALYSIS.md  SCALABILITY_REVIEW.md  SECURITY_REVIEW.md  SIR_PRESENTATION.md  TEST_REPORT.md  VULNERABILITY_REMEDIATION.md  conftest.py  coverage.xml  pyproject.toml  requirements-dev.txt
apps/parser/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/parser/artifacts/metrics/: parser.prom
apps/parser/src/teams_mattermost_migration_parser/: __init__.py  cli.py  config.py  constants.py  container.py  logging_utils.py  transformer.py
apps/parser/src/teams_mattermost_migration_parser/application/: __init__.py  pipeline.py  protocols.py  services.py
apps/parser/src/teams_mattermost_migration_parser/domain/: __init__.py  exceptions.py  models.py  normalization.py
apps/parser/src/teams_mattermost_migration_parser/infrastructure/: __init__.py  ms_graph_reader.py  (+2 more)
apps/parser/tests/: test_hardened_features.py  test_hardened_features_coverage.py  test_membership_optimization.py  test_ms_graph_reader.py  test_supporting_layers.py  test_telemetry.py  test_transformer.py
(+67 files in other folders)
