[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teams-mattermost-migration-parser"
version = "0.1.0"
description = "Typed parser and transformation CLI for Teams to Mattermost migration payloads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "email-validator>=2.1,<3.0",
  "ijson>=3.3,<4.0",
  "prometheus-client>=0.20,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "pydantic>=2.7,<3.0",
]

[project.scripts]
tmmp-parser = "teams_mattermost_migration_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
